--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -109,7 +109,7 @@ Below, we summarise the existing observations of merging binary black holes and 
 
 
 \subsubsection{The confirmed detections to date}
-During its first science run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second science run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections have been announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of them with the participation of the Virgo gravitational-wave observatory.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes here.
+During its first science run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second science run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections have been announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of them with the participation of the Virgo gravitational-wave observatory \ilya{\citep{AdvVirgo}}.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes here.
 
 \subsubsection{Information encoded in GW signals}
 The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  
@@ -117,9 +117,6 @@ The gravitational-wave signature of a merging binary encodes the properties of t
 \subsubsection{Information extracted from the observed GW signals}
 We list the parameters of the black holes observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
 
-\textbf{Mass Ratios:} While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
-
- 
 \begin{table}
 \begin{tabular}{lcccccc}
 Event  & $M_c$ [$M_\odot$]  & q & $M_1$ [$M_\odot$]  & $M_2$ [$M_\odot$]  & $\chi_\textrm{eff}$ & $d_L$ [Mpc] \\
@@ -132,20 +129,16 @@ GW170608\footnote{\citet{GW170608}} & $7.9^{+0.2}_{-0.2}$ &$0.6^{+0.3}_{-0.4}$ &
 GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0}$ &$25.3^{+2.8}_{-4.2}$ &$0.06^{+0.12}_{-0.12}$ & $540^{+130}_{-210}$ \\
 \hline
 \end{tabular}
-\caption{The inferred parameters of the merging binary black holes.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
+\caption{The parameters of merging binary black holes \ilya{inferred from gravitational-wave observations}.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
 \end{table}
 
+\textbf{\ilya{Masses:}} \ilya{The individual black hole masses span a range from $\approx 7 M_\odot$ to $\approx 35 M_\odot$.  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems.}  Sensitivity to gravitational waves from binary mergers depends on the \ilya{system} mass.  The \ilya{gravitational-wave amplitude, and hence the maximum (horizon)} distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While \ilya{existing} observations are not sufficient to \ilya{accurately} determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$ \ilya{\citep{bbh:o1}}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \ilya{\citep{GW170104}}.  
 
-%GW150914 has the heaviest black holes, allowing the total mass $M \equiv M_1 + M_2$ to be particularly well measured as the merger and ringdown fall in the sensitive frequency band of the detectors: $65 \pm 4\, M_\odot$ in the source frame.  For the other two events with lighter black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter; $M_c = 15 \pm 1\, M_\odot$ for LVT151012 and  $M_c = 8.9 \pm 0.3\, M_\odot$ for GW151226.  The mass ratio is relatively well constrained toward equal masses for GW150914, providing confidence that both components weigh in within a few solar masses of $30\, M_\odot$.  On the other hand, while LVT151012 and GW151226 may be signals from mergers of nearly equal-mass $\sim 17\, M_\odot$ and $\sim 10\, M_\odot$ black holes, respectively, the black hole masses could also be very unequal for these events, as the mass ratios could be as extreme as $4:1$ and $3:1$, respectively. 
-
-%\todo {Add newest detections.  Table?  Better yet, figure, including XRBs and uncertainties?}
+\textbf{Mass Ratios:} While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
 
 \textbf{Black Hole Spins:} Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin along the direction of the orbital angular momentum $\chi_\textrm{eff}$ is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, it is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
 
-\textbf{Distances:} All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
-
-\textbf{Mass Distribution:} Sensitivity to gravitational waves from binary mergers depends on the object mass; the horizon distance at which a source is detectable scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While three observations are not sufficient to determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$.  
-%mass distribution is a more derived quantity than any of the others mentioned above. Is there a better place for this?
+\textbf{Distances:} All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$ \ilya{\citep{GW170608}}.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
 
 \textbf{Testing General Relativity:} All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
 
