--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -132,7 +132,7 @@ GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0
 \caption{The parameters of merging binary black holes \ilya{inferred from gravitational-wave observations}.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
 \end{table}
 
-\textbf{\ilya{Masses:}} \ilya{The individual black hole masses span a range from $\approx 7 M_\odot$ to $\approx 35 M_\odot$.  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems.}  Sensitivity to gravitational waves from binary mergers depends on the \ilya{system} mass.  The \ilya{gravitational-wave amplitude, and hence the maximum (horizon)} distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While \ilya{existing} observations are not sufficient to \ilya{accurately} determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$ \ilya{\citep{bbh:o1}}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \ilya{\citep{GW170104}}.  
+\textbf{\ilya{Masses:}} \ilya{The individual black hole masses span a range from $\approx 7 M_\odot$ to $\approx 35 M_\odot$.  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems.}  Sensitivity to gravitational waves from binary mergers depends on the \ilya{system} mass.  The \ilya{gravitational-wave amplitude, and hence the maximum (horizon)} distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While \ilya{existing} observations are not sufficient to \ilya{accurately} determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$ \ilya{\citep{BBH:O1}}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \ilya{\citep{GW170104}}.  
 
 \textbf{Mass Ratios:} While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
 
