Done with section 2.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -19274,7 +19274,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@TechReport{PySTAN,
+@misc{PySTAN,
   author={{Stan Development Team}},
   title={PyStan: the Python interface to Stan, Version 2.16.0.0.},
   year={2017},
@@ -19282,7 +19282,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{astropy,
-   author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. and
+   author = {{Robitaille}, T.~P. and {Tollerud}, E.~J. and
 	{Greenfield}, P. and {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and
 	{Davis}, M. and {Ginsburg}, A. and {Price-Whelan}, A.~M. and
 	{Kerzendorf}, W.~E. and {Conley}, A. and {Crighton}, N. and
@@ -19333,7 +19333,7 @@ eprint = {
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001--},
   url = "http://www.scipy.org/",
-  note = {[Online; accessed <today>]}
+  note = {\url{http://www.scipy.org/}}
 }
 
 @ARTICLE{matplotlib,
@@ -19385,7 +19385,8 @@ eprint = {
   month        = sep,
   year         = 2017,
   doi          = {10.5281/zenodo.883859},
-  url          = {https://doi.org/10.5281/zenodo.883859}
+  url          = {https://doi.org/10.5281/zenodo.883859},
+  note         = {\url{https://doi.org/10.5281/zenodo.883859}}
 }
 
 
@@ -20021,5 +20022,18 @@ archivePrefix = "arXiv",
     pages = {L5},
       doi = {10.1086/187102},
    adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...418L...5P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Jeffreys:1946,
+   author = {{Jeffreys}, H.},
+    title = "{An Invariant Form for the Prior Probability in Estimation Problems}",
+  journal = {Proceedings of the Royal Society of London Series A},
+     year = 1946,
+    month = sep,
+   volume = 186,
+    pages = {453-461},
+      doi = {10.1098/rspa.1946.0056},
+   adsurl = {http://adsabs.harvard.edu/abs/1946RSPSA.186..453J},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
