--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -143,23 +143,28 @@ GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0
 \textbf{Testing General Relativity:} All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
 
 \subsection{Electromagnetic observations}
-%This section is currently very jargony... lots of terms that will mystify the non-astro student.
 
-\subsubsection{Electromagnetic observations as complementary probes}
+%\subsubsection{Electromagnetic observations as complementary probes}
 
-\textcolor{red}{Placeholder intro paragraph -- this section needs an intro.} The systems that eventually become merging binary black holes have most likely passed through a number of other phases of existence, including phases in which the system or its component stars emitted electromagnetic radiation. Many other binary evolution pathways are possible, including a large fraction which do not end as a binary black hole merger. Binary evolutionary pathways are discussed in more detail in \autoref{form}. In this section we describe some of the key electromagnetic observations that -- together with the GW observations of merging black holes -- shed light on the evolution of massive stellar binaries.
+\ilya{While recent gravitational-wave observations have invigorated the field of massive binary evolution, there is already a wealth of electromagnetic observations of various stages along the possible paths to binary black hole formation, which are discussed in \autoref{form}.  In this section we describe some of the key electromagnetic observations --- together with the GW observations of merging black holes --- shed light on compact object binary formation and evolution preceding merger.}
 
-Many electromagnetic observations of binary stars have been made over the years. \textcolor{red}{Want to make it clear here that the more mature field is the EM one, but that GWs have suddenly invigorated things?} A subset of these shed light on various intermediate stages of compact object binary formation and evolution preceding merger. These include observations of initial mass and period distributions of massive stellar binaries \citep[e.g.,][]{Sana:2012}, and observations of luminous red novae, which may be associated with common envelope events \citep{Ivanova:2013LRN}. These also include observations of supernovae, X-ray binaries (including Be X-ray binaries, and ultra-luminous X-ray binaries -- and other types??), Galactic binary radio pulsars, and gamma ray bursts. We focus here on black hole X-ray binaries, the type of binary star with the closest connection to merging binary black holes.
-
-%observations of mass and period distributions of luminous red novae or just observations of them in general??
+\ilya{Electromagnetic observations of the evolution of massive stellar binaries include: 
+\begin{itemize}
+\item observations of the initial mass and period distributions of binary stars at formation \citep[e.g.,][]{Sana:2012}; 
+\item observations of luminous red novae, which may be associated with common envelope events \citep[e.g.,][]{Ivanova:2013LRN};
+\item Galactic binary radio pulsars \citep[e.g.,][]{Tauris:2017};
+\item short gamma-ray bursts \citep[e.g..][]{Berger:2014};
+\item supernovae and long gamma-ray bursts;
+\item X-ray binaries.
+\end{itemize}
+Here, we focus on X-ray binaries consisting of a star transferring mass onto a black hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole, since this is the type of binary star with the closest connection to merging binary black holes.  In fact, a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep{CygnusX3:2012}.}
 
 \subsubsection{X-Ray Binaries}
 
-\textcolor{red}{Say (briefly) what an X-ray binary is?} We focus here on observations of X-ray binaries containing a black hole accreting mass from a companion, either through wind-driven mass loss and Bondi-Hoyle accretion (high-mass X-ray binaries) or Roche lobe overflow from a companion that has expanded beyond the $L_1$ Lagrange point  (low-mass X-ray binaries).   \textcolor{red}{jargooooon}
-Some of the observed high-mass X-ray binaries may ultimately produce gravitational-wave sources \citep{CygnusX3:2012}.  %what do you mean by "ultimately produce GW sources?"
+\ilya{X-ray binaries with accreting black holes can be divided into two categories based on the impact of the tidal pull of the black hole on the companion.  If the tidal field of the black hole is disrupting the companion, forcing mass to stream onto the black hole in a process known as Roche-lobe overflow, the systems is known as a low-mass black-hole X-ray binary.  If the tides are less extreme and the black hole only accretes a fraction of the mass driven off the stellar surface (stellar wind), the system is known as a high-mass X-ray binary.}
 
 \textbf{Black hole masses:} 
- Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black hole masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.  The masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses} along with the masses of gravitational-wave sources.  This figure does not include speculative but potentially very exciting intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008}.
+Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black hole masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses \ilya{for the lightest low-mass X-ray binaries} (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more \ilya{for the heaviest high-mass X-ray binaries}.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.  The masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses} along with the masses of gravitational-wave sources.  This figure does not include speculative but potentially very exciting intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008}.
 %\todo{Add GC X-ray binary observations} 
 
 \begin{figure}
@@ -170,13 +175,12 @@ Some of the observed high-mass X-ray binaries may ultimately produce gravitation
 \end{figure}
 
 
-\textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, for 2 of 6 systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining 3 systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, \ilya{out of six} systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level \ilya{for two systems}, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining \ilya{three} systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
 \textbf{Inconsistency with Spin Observations from GW Sources?} Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
-Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins; however, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
+Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements \ilya{in X-ray binaries} could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
-\textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the micro
-quasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
+\textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
 \section{Formation scenarios}\label{form}
 
