Done with III.A.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -184,7 +184,7 @@ Isolated binaries that form binary black holes must go through the high-mass X-r
 
 \section{Formation scenarios}\label{form}
 
-When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star (because neutron stars are more common than black holes \ajf{is this the reason?}), and even more surprised by the high black hole masses (in excess of the observed black hole masses in X-ray binaries). Was this surprise justified? And should we be surprised at the spin or mass ratio measurements for the LIGO sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational wave observations will help us to answer. Below, we explain why -- on the face of it -- it's rather surprising that compact massive binaries exist at all. We then describe the leading candidate formation channels in turn, and in the next section we describe the ways in which gravitational wave observations might be used to distinguish them.
+When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star (\ilya{because there was observational evidence for merging double neutron stars in the Galaxy starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}, but no direct evidence for merging binary black holes}), and even more surprised by the high black hole masses (in excess of the observed black hole masses in X-ray binaries). Was this surprise justified? And should we be \ilya{perplexed by} the spin or mass ratio measurements for the \ilya{gravitational-wave} sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather \ilya{startling} that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we \ilya{discuss} the ways in which gravitational-wave observations might be used to distinguish them.
 
 
 \subsection{The Separation Question}
@@ -192,9 +192,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two thirty-solar mass black holes responsible for GW150914, the initial separation must have been less than 50 solar radii -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
 
-\textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach an astronomical unit in size during its giant phase; the stars (above 20 solar masses at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem: if the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no LIGO sources would exist today. 
+\textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach \ilya{roughly} an astronomical unit in size during its giant phase; the stars (above 20 solar masses at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
 
-\textbf{And the problem is even worse for neutron stars.} Because the gravitational-wave merger timescale is inversely proportional to the cube of the masses, double neutron stars must be separated by less than 5 solar radii to merge within the age of the Universe. The stars (8 to 20 solar masses at birth) that produce neutron stars also expand greatly during their evolution. But even \textit{at birth}, the neutron stars' progenitors could not fit into a binary of the required size.  
+\textbf{And the problem is even worse for neutron stars.} Because the gravitational-wave merger timescale is inversely proportional to the cube of the masses, double neutron stars must be separated by less than 5 solar radii to merge within the age of the Universe. The stars (\ilya{approximately} 8 to 20 solar masses at birth) that produce neutron stars also expand greatly during their evolution. But even \textit{at birth}, the neutron stars' progenitors could not fit into a binary of the required size.  
  
 \begin{figure}
 	\centering
@@ -206,7 +206,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 %\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
 
-\textbf{So then why do the LIGO sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ajf{Example ref for LIGO source predictions?}. Three leading formation scenarios have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore all three in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
+\textbf{So then why do the \ilya{gravitational-wave} sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ilya{\citep{ratesdoc}}. Three leading formation scenarios have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore all three in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Bring the stars together after they have expanded: classical isolated binary evolution via the common-envelope phase}
