--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20037,3 +20037,18 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/1946RSPSA.186..453J},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{HulseTaylor:1975,
+   author = {{Hulse}, R.~A. and {Taylor}, J.~H.},
+    title = "{Discovery of a pulsar in a binary system}",
+  journal = {\apjl},
+ keywords = {Binary Stars, Orbital Elements, Pulsars, Relativistic Effects, Black Holes (Astronomy), Companion Stars, Eccentric Orbits, Mass Ratios, Neutron Stars, Radial Velocity, Velocity Distribution},
+     year = 1975,
+    month = jan,
+   volume = 195,
+    pages = {L51-L53},
+      doi = {10.1086/181708},
+   adsurl = {http://adsabs.harvard.edu/abs/1975ApJ...195L..51H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
